# cpp-oxygine-chess

./: .gitignore  .gitmodules  README.md
data/xmls/: ui.xml
proj.cmake/: CMakeLists.txt  run.sh
src/: Board.cpp  Board.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  Piece.cpp  Piece.h  Scene.cpp  main.cpp
